Add translation for chapter 66

--- a/books/ära-kasva-suureks/ru/66.md
+++ b/books/ära-kasva-suureks/ru/66.md
@@ -1,16 +1,16 @@
-## LUGU LAPSELIKUST AUSUSEST
-## Abraham Lincoln
+# ИСТОРИЯ О ДЕТСКОЙ ЧЕСТНОСТИ
+## Авраам Линкольн
 
-Abraham Lincolni hüüdnimeks oli aus Abe. Legendi järgi teenis ta selle nime umbes 22-aastaselt Illinoisis New Salemi külapoes poemüüjana töötades. Lincoln oli tol ajal veidi kohmetu ja häbelik, kuid alati pinlikult korrektne ja täpne. Ta ei soovinud klientide teadmatust ära kasutada ja tahtis alati kiiresti tekkinud vigu heastada.
+_У меня недостаточно хорошая память, чтобы лгать_ Авраам Линкольн
 
-Ühel päeval müüs ta 2 dollari ja kuue sendi eest kaupu proua Duncanile, kes elas kahe miili kaugusel. Õhtul enne poe sulgemist arveid üle vaadates avastas Lincoln, et proua Duncan maksis kuus senti rohkem, kui pidi. "See viga tuleb parandada täna õhtul," ütles ta endale ning niipea, kui ta poe sulges, asus ta kassa ülejääki kliendile tagasi viima. Proua oli just magama minemas, kui kuulis koputust uksele.
+У Авраама Линкольна было прозвище честный Эйб. Согласно легенде он заработал его в возрасте примерно 22-х лет, работая продавцом в магазине в городе Нью Салем, штат Иллинойс. Линкольн в то время был немного рассеянным и застенчивым, однако всегда до педантичности точным. Он не желал пользоваться неведением клиентов и всегда хотел исправить возникшую ошибку как можно скорее.
 
-Proua Duncan oli väga üllatunud, kui ta leidis ust avades külapoe müüja uksel seismas. Lincoln vabandas tekkinud vea tõttu, tagastas prouale kuus senti ning magas sel ööl rahulikult, kuna heastas oma eksimuse.
+Однажды он продал миссис Дункан, живущей за 3 километра от магазина, товаров на 2 доллара и 6 центов. Вечером того же дня при проверке перед закрытием магазина Линкольн понял, что миссис Дункан заплатила на 6 центов больше, чем должна была. "Эта ошибка должна быть исправлена сегодня же вечером", сказал он себе и как только закрыл магазин, направился, захватив в собой излишек, возвращать его клиенту. Дама уже готовилась ко сну, когда услышала стук в дверь.
 
-Teine kord tuli üks naine poodi hilisõhtul, kui Lincoln oli juba uksi sulgemas. Ta ostis pool kilo teed, mis kaaluti kiirustades. Kohe, kui ostja lahkus, lukustas Lincoln poe ning läks koju. Järgmise päeva hommikul märkas ta kaalusid, millel oli kaheksa asemel neli untsi raskusi. Kohe teadis ta, et andis naisele poole naela tee asemel ainult veerand naela jagu teed. Kaalunud juurde veerand naela teed, sulges ta poe ja viis puuduoleva koguse ostjale koju, vabandades eelmise paeva eksitust.
+Миссис Дункан очень удивилась, открыв дверь и обнаружив за ней продавца из магазина. Линкольн извинился за произошедшее, вернул даме 6 центов и спал той ночью спокойно, поскольку исправил свою ошибку.
 
-Selliseid lugusid Lincolni lapselikust aususest on üsna palju. Raske elda, kui täpselt need lood tõele vastavad, kuid vaieldamatult peetakse Lincolni üheks Ameerika ajaloo suurimaks kangelaseks ja eeskujuks, kes suutis kodusoja ajal presidendiametis olles sailitada Ameerika ühtsuse ja lopetada orjapidamise. Kõiges selles oli suur roll tema lapselikul aususel. Rahvas ja lähikondlased usaldasid teda, kuna ta rääkis otse südamest ning tema teod olid lapselikult ausad. Lincoln oli lapseliku loomuga.
+В другой раз одна женщина пришла в магазин поздним вечером, когда Линкольн уже закрывал двери. Она купила полфунта чая, который взвесили в спешке. Как только покупатель ушел, Линкольн сразу же закрыл магазин и ушел домой. Утром следующего дня он обратил внимание, что на весах было взвешено лишь четыре унции вместо восьми. Он тут же осознал, что дал женщине вместо половины фунта чая всего лишь четверть фунта. Взвесив еще четверть, он закрыл магазин и отнес недостающее количество покупателю на дом, извинившись за совершенную вчера ошибку.
 
-Socrates on öelnud: "Aus mees on alati laps."
+Историй о подобной честности Линкольна довольно много. Трудно сказать, насколько они соответствуют действительности, но невозможно не отметить, что Линкольн является образцом и одним из величайших героев в истории Америки, которому удалось, будучи президентом, сохранить единство Америки в период гражданской войны и остановить рабовладение. Большую роль в этом сыграла его честность. Народ и приближенные доверяли ему, поскольку он говорил от всего сердца и его поступки были по-детски честны. Линкольн был ребенком по натуре.
 
-"KELLELGI EL OLE PISAVALT HEA MALU, OLEMAKS EDUKAS VALETAJA." Abraham Lincoln
+Сократ сказал: "Честный человек всегда ребенок."
