--- a/books/ära-kasva-suureks/ee/66.md
+++ b/books/ära-kasva-suureks/ee/66.md
@@ -1,7 +1,7 @@
 ## LUGU LAPSELIKUST AUSUSEST
 ## Abraham Lincoln
 
-Abraham Lincolni hüüdnimeks oli aus Abe. Legendi järgi teenis ta selle nime umbes 22-aastaselt Illinoisis New Salemi külapoes poemüüjana töötades. Lincoln oli tol ajal veidi kohmetu ja häbelik, kuid alati pinlikult korrektne ja täpne. Ta ei soovinud klientide teadmatust ära kasutada ja tahtis alati kiiresti tekkinud vigu heastada.
+Abraham Lincolni hüüdnimeks oli aus Abe. Legendi järgi teenis ta selle nime umbes 22-aastaselt Illinoisis New Salemi külapoes poemüüjana töötades. Lincoln oli tol ajal veidi kohmetu ja häbelik, kuid alati piinlikult korrektne ja täpne. Ta ei soovinud klientide teadmatust ära kasutada ja tahtis alati kiiresti tekkinud vigu heastada.
 
 Ühel päeval müüs ta 2 dollari ja kuue sendi eest kaupu proua Duncanile, kes elas kahe miili kaugusel. Õhtul enne poe sulgemist arveid üle vaadates avastas Lincoln, et proua Duncan maksis kuus senti rohkem, kui pidi. "See viga tuleb parandada täna õhtul," ütles ta endale ning niipea, kui ta poe sulges, asus ta kassa ülejääki kliendile tagasi viima. Proua oli just magama minemas, kui kuulis koputust uksele.
 
@@ -9,8 +9,8 @@ Proua Duncan oli väga üllatunud, kui ta leidis ust avades külapoe müüja uks
 
 Teine kord tuli üks naine poodi hilisõhtul, kui Lincoln oli juba uksi sulgemas. Ta ostis pool kilo teed, mis kaaluti kiirustades. Kohe, kui ostja lahkus, lukustas Lincoln poe ning läks koju. Järgmise päeva hommikul märkas ta kaalusid, millel oli kaheksa asemel neli untsi raskusi. Kohe teadis ta, et andis naisele poole naela tee asemel ainult veerand naela jagu teed. Kaalunud juurde veerand naela teed, sulges ta poe ja viis puuduoleva koguse ostjale koju, vabandades eelmise paeva eksitust.
 
-Selliseid lugusid Lincolni lapselikust aususest on üsna palju. Raske elda, kui täpselt need lood tõele vastavad, kuid vaieldamatult peetakse Lincolni üheks Ameerika ajaloo suurimaks kangelaseks ja eeskujuks, kes suutis kodusoja ajal presidendiametis olles sailitada Ameerika ühtsuse ja lopetada orjapidamise. Kõiges selles oli suur roll tema lapselikul aususel. Rahvas ja lähikondlased usaldasid teda, kuna ta rääkis otse südamest ning tema teod olid lapselikult ausad. Lincoln oli lapseliku loomuga.
+Selliseid lugusid Lincolni lapselikust aususest on üsna palju. Raske öelda, kui täpselt need lood tõele vastavad, kuid vaieldamatult peetakse Lincolni üheks Ameerika ajaloo suurimaks kangelaseks ja eeskujuks, kes suutis kodusõja ajal presidendiametis olles säilitada Ameerika ühtsuse ja lõpetada orjapidamise. Kõiges selles oli suur roll tema lapselikul aususel. Rahvas ja lähikondlased usaldasid teda, kuna ta rääkis otse südamest ning tema teod olid lapselikult ausad. Lincoln oli lapseliku loomuga.
 
 Socrates on öelnud: "Aus mees on alati laps."
 
-"KELLELGI EL OLE PISAVALT HEA MALU, OLEMAKS EDUKAS VALETAJA." Abraham Lincoln
+"KELLELGI EL OLE PIISAVALT HEA MÄLU, OLEMAKS EDUKAS VALETAJA." Abraham Lincoln
