--- a/kodutöö/20240812.md
+++ b/kodutöö/20240812.md
@@ -49,4 +49,20 @@
 4. Ma olen harjunud vähesega läbi saama.
 5. Ma hakkasin saama paremat palga.
 6. Ma sai Saksa keele kätte. // НЕПРАВИЛЬНО! Ma sai selgeks Saksa keele.
-7. 
+7. Lühike suvi on otsa saamas.
+8. Ma ei saa kuidagi kodust välja.
+9. Kõik sai korralt selgeks.
+10. Enne kooliminekut tuleb lugemisoskus kätte saada.
+11. Sain päris vihaseks.
+12. Ema sai vihaseks poisi peale.
+13. Raha hakkab otsa saama.
+14. Kedagi polnud kodus, ma ei saanud sisse.
+15. Tuleb võlgadest välja saada.
+16. Ilma tööta läbi ei saa.
+17. Temaga tuli hästi läbi saama.
+18. Saime sellest aegsasti teada.
+19. Sain seda teada usaldusväärsetest allikatest.
+20. Ta kibeles sai teada, millest seal räägiti.
+21. Me kolistasime ukse peale, kuni sisse saime.
+22. Nad said teineteisega hästi läbi.
+23. Sain palka juurde.
