--- a/kodutöö/20250108.md
+++ b/kodutöö/20250108.md
@@ -19,35 +19,68 @@ Võtmesona ka keeleõppes. Ole žonglöör, kes pallide asemel viskab õhku häi
 Это ключевое слово в обучении. Будь жонглером, который вместо мячей подбрасывает хорошие выражения. Не создавай свои собственные сложные языковые конструкции, жонглируй знакомыми фразами. Сделай активным полезный словарный запас из уроков. В учебнике десятки хороших выражений на все случаи жизни.
 
 ÕPI PÄHE!
-Teadusuuringud on vana hea päheõppimise jälle ausse töstnud; aju saab treenida nagu lihaseid. Seega on eestikeelsete väljendite, tekstide ja luuletuste päheõppimine suurepärane mälutreening.
+
+Teadusuuringud on vana hea päheõppimise jälle ausse tõstnud: aju saab treenida nagu lihaseid. Seega on eestikeelsete väljendite, tekstide ja luuletuste päheõppimine suurepärane mälutreening.
+
+УЧИ НАИЗУСТЬ!
+
+Научные исследования снова вернули в моду старое доброе заучивание наизусть: мозг можно тренировать, как и мышцы. Поэтому заучивание наизусть эстонских выражений, текстов и стихов - отличная тренировка памяти.
 
 VÄLJENDU LIHTSALT JA LÜHIDALT!
 
 Lihtne on ilus kehtib ka eesti keele puhul. Eestlaste suhtlusstiil on suhteliselt konkreetne. Eriti kirjalikus tekstis väldi sõnakordusi ja üleliigseid sõnu. Järgi tuntud ütlemist ja ära tee tühje sõnu. Teadlased väidavad ka, et lühikesed laused annavad mõtteid edasi tunduvalt selgemalt kui pikad.
 
+ИЗЛАГАЙ МЫСЛИ ПРОСТО И КРАТКО!
+
+Выражение "красота в простоте" распространяется и на эстонский язык. Стиль общения эстонцев довольно конкретен. Избегай повторов и лишних слов, особенно на письме. Следуй этому известному выражению и употребляй пустых слов. Ученые также утверждают, что короткие предложения передают мысли гораздо яснее, чем длинные.
+
 HARJUTUSI TEE KODUS!
 
 Või kohvikus või lennujaamas. Kirjuta vastused vihikusse, mitte õpikusse. Paranda värviliselt, iseenesestmõistetavalt õpi harjutused selgeks. Tunnis loeme neid paarides ja puhtast raamatust. Nii on see nagu minitest - mida tead, mida mitte. Vastused on õpikus olemas, mis mõtet on neid tunnis lihtsalt maha lugeda?
+
+УПРАЖНЕНИЯ ДЕЛАЙ ДОМА!
+
+А также в кафе или аэропорту. Ответы записывай не в учебник, а в тетрадь. Исправляй цветными чернилами, и, само собой, делай упражнения пока полностью не разберешься. На уроке мы будем читаем их по парам из чистой книги. И это будет как бы мини тестом - что уже знаешь, а что еще нет. Если ответы уже написаны в учебнике, то какой смысл их еще раз перечитывать на уроке?
 
 ÄRA STRESSA! NAERATA!
 
 Kui õppimine läheb igavaks ja tundub, et eesti keel lihtsalt ei saa kunagi selgeks, naerata ja kiida ennast selle eest, mida juba oskad. Ole positivne, varu kannatust! Loobu perfektsionismist, naudi eesti keelt. Kasuta huumorit, fantaasiat, mängi sõnadega. Ära hoia kramplikult tõest kinni, lase mõtetel lennata.
 
+НЕ СТРЕССУЙ! УЛЫБАЙСЯ!
+
+Если учиться становится скучно, и ты чувствуешь, что просто никогда не сможешь выучить эстонский, улыбнись и похвали себя за то, что уже умеешь. Будь позитивным и запасись терпением. Откажись от перфекционизма и наслаждайся эстонским языком. Используй юмор, фантазию, играй со словами. Не держись слишком крепко за правду, отправь мысли в полет.
+
 HOIA ÕPIK PUHAS!
 
 Ära kribi uute sõnade tõlkeid õpikusse. Nii saad ka ülehomme või nädala pärast kontrollida, mis on sulle meelde jäänud ja mis ei ole. Õpikus on päris põhjalikud sõnastikud, enamik uusi sõnu on seal ju olemas. Kodus ning ka järgmises tunnis on hea puhtaid tekste üle lugeda, et ununenud sõnad välja sõeluda.
+
+ДЕРЖИ УЧЕБНИК В ЧИСТОТЕ!
+
+Не чиркай переводы новых слов в учебник. Тогда послезавтра или через неделю ты сможешь проверить, что осталось в памяти, а что нет. В учебнике есть довольно исчерпывающие словари, большинство новых слов там уже есть. Дома и на следующем уроке полезно перечитать тексты, чтобы найти забытые слова.
 
 ÕPI NAGU LAPS!
 
 Rakenda kõiki meeli, võta appi oma keha, ka tunnis kasutage liigutusi, žeste, koputage rütmi, tehke joogat. See loob mõnusa meeleolu ja maandab pingeid. Ära pabista, kui paistad pisut lapsikuna.
 
+УЧИСЬ КАК РЕБЕНОК!
+
+Используй все свои чувства, призови на помощь тело, используйте во время урока движения, жесты, выстукивайте ритмы. Это создает приятный настрой и снимает напряжение. Не беспокойся, если это покажется немного ребяческим.
+
 LOE NII PALJU, KUI SUUDAD!
 
 Lugedes tekib keeletaju. Naudi lugemist, pole ju vaja kohe iga üksiku sõna tähendust sõnastikust otsida. Kiika sisse L nagu lugemikku, seal on hea valik lühikesi tekste Eesti kirjandusest.
 
+ЧИТАЙ СТОЛЬКО, СКОЛЬКО СМОЖЕШЬ!
+
+Чтение вырабатывает чувство языка. Получай удовольствие от чтения, не нужно значение каждого отдельного слова искать в словаре. Загляни в "Л как хрестоматия", там отличный набор небольших отрывков из эстонской литературы.
+
 MÕTLE EESTI KEELES!
 
 Eriti kui kulged üksi, kõnele iseendaga. Leia alati võimalus keelt praktiseerida. Ära looda, et eestlased võõrastega rääkima hakkavad või et nad kellelegi rõmust kaela langevad. Ole ise julge, astu juurde ja alusta vestlust.
+
+ДУМАЙ НА ЭСТОНСКОМ!
+
+Говори сам с собой, особенно когда ты передвигаешься в одиночестве. Всегда находи возможность попрактиковать язык. Не надейся, что эстонцы сами начнут разговаривать с незнакомцем, или что они к кому-то с радостью свалятся на шею. Будь смелым, подойди и начни разговор сам.
 
 
 ## 2. Väga lihtne test (Очень простой тест)
