--- a/kodutöö/20250114.md
+++ b/kodutöö/20250114.md
@@ -1,5 +1,4 @@
-# Kodutöö 2025-01-04
-
+# Kodutöö 2025-01-14
 
 ## KEEL
 
@@ -12,13 +11,52 @@
 7. A: See on maailmakuulus kirjanik. B: Mitmesse **keelde** teda on tõlgitud?
 8. A: Mis sinu hobid on? B: Näiteks võõr**keelte** õppimine.
 
+
 ## TEGUSÕNA MINEVIK
 
 ### Minu suhe eesti keelega
 
+1. Ma **hakkasin** eesti keelt õppima juba ammu. 
+2. Keskkoolis **olid** meil ka eesti keele tunnid, aga siis ma **olin** natuke laisk ega **õppinud** väga palju. 
+3. Pärast keskkooli **läksin** ma tööle ja siis mul ei **olnud** enam palju aega eesti keelega **tegelemiseks**.
+4. Kolm aastat tagasi ma **otsustasin**, et hakkan uuesti keelt õppima.
+5. Ma **helistasin** ühte keelefirmasse ja **küsisin** infot.
+6. Ma **sain** teada, et uus kursus just **algas**. 
+7. Õnneks ei **olnud** grupp täis ja ma **sain** selle kursusega ühineda.
+8. See **oli** kesktaseme grupp, grupis **olid** 15 õpilast.
+9. Ma **käisin** sellel kursusel kokku 10 kuud.
+10. Tunnis me **kirjutasime** ja **rääkisime** palju ning õpetaja **andis** ka palju koduseid töid.
+11. Pärast kursust ma hakkasin rohkem eesti keelt **kasutama** ja sellest **rääkima**.
+12. Kui ma **kohtusin** oma eesti sõpradega, siis **suhtlesime** alati eesti keeles.
+13. Ma **kasutasin** eesti keelt palju rohkem ka tööl: **rääkisin** klientidega ja **kirjutasin** kirju.
+14. Mul on hea meel, et ma **sain** sellel kursusel oma keeleoskust parandada. 
+15. Nii et kokkuvõtteks ma võin küll **öelda**, et pingutus **oli väärt**.
+
+
 ## MINEVIK
 
+1. Kas sa nägid eile Markot? Ei **ei näinud**.
+2. Kas te jäite tundi hiljaks? Ei **ei jäänud**.
+3. Kas sa panid kõik asjad kotti? Ei **ei pannud**.
+4. Kas te läksite peolt kohe koju? Ei **ei läinud**.
+5. Kas sa tõid minu õpiku tagasi? Ei **ei toonud**.
+6. Kas sa oskasid seda testi teha? Ei **ei osanud**. 
+7. Kas sa tegid kõik ülesanded ära? Ei **ei teinud**.
+8. Kas sa pidid eksamile minema? Ei **ei pidanud**.
+
+
 ## ÜTLE TEISITI!
+
+1. Eile selgusid eksami tulemused. Ma sain mu hinde kätte eile. 
+2. Ma ei mõistnud tema juttu. Ma ei saanud aru, mida ta rääkis.
+3. Mul ei ole selle kohta infot. Ma ei teadnud selle kohta midagi.
+4. Tehke kõik kodused ülesanded! Ärge unustage _____!
+5. Kirjutamine on kerge. Ma oskan _____.
+6. Kus need õpikud on? Kuhu sa _____?
+7. Arge rääkige nii kiiresti! Rääkige _____!
+8. Mul on kesktase. Ma olen _____.
+9. Mis see eesti keeles on? Kuidas seda _____?
+10. See tekst on päris raske. Sellest _____.
 
 
 ## KÕNEVÄLJENDID / РАЗГОВОРНЫЕ ВЫРАЖЕНИЯ
