--- a/kodutöö/20250114.md
+++ b/kodutöö/20250114.md
@@ -81,3 +81,87 @@
 - Nii see küll ei olnud / Такого точно не было
 - Ma ei usu, et... / Я не верю, что...
 - Ma ei arva, et... / Я не думаю, что...
+
+### AVALDAD ARVAMUST / ВЫСКАЗЫВАНИЕ МНЕНИЯ
+
+- Minu arvates... / По моему мнению...
+- Minu meelest / По-моему
+- Minu teada... / На мой взгляд...
+- Mina arvan, et... / Я думаю, что...
+- Mulle tundub, et... / Мне кажется, что...
+- Paistab, et... / Кажется, что...
+- Arvatavasti see... / Вероятно, это...
+
+### SOOVITAD / РЕКОМЕНДАЦИИ
+
+- Sa võiksid... / Ты мог бы...
+- Mina sinu asemel... / Я на твоем месте...
+- Kõige parem, kui sa... / Лучше всего, если ты...
+- Kõige õigem on vist... / Наверное, лучше...
+- Parim, mis sa saaksid teha, on... / Лучшее, что ты можешь сделать, это...
+- Kõige tähtsam on praegu... / Самое главное сейчас...
+
+### KÜSID ARVAMUST / СПРАШИВАЕШЬ МНЕНИЕ
+
+- Mida/Mis teie arvate? / Что вы думаете?
+- Milline on teie seisukoht? / Каково ваше мнение?
+- Kuidas teile tundub? / Как вам кажется?
+
+### TÄPSUSTAD / УТОЧНЕНИЕ
+
+- Te saite vist minust valesti aru. / Вы, наверное, меня неправильно поняли.
+- Ma pean täpsustama, et... / Я должен уточнить, что...
+- Ma ei mõelnud seda nii. / Я не имел в виду этого.
+
+### OLED UNUSTANUD / ЗАБЫЛ
+
+- Mul on meeles, et... / Я помню, что...
+- Mul ei ole meeles, et... / Я не помню, что...
+- Kahjuks ma ei mäleta, kas... / К сожалению, я не помню, что...
+- Ma olen unustanud, mis... / Я забыл, что...
+- Mul(le) tuli meelde, et... / Мне вспомнилось, что...
+- Mul(le) ei tule meelde, ... / Не могу вспомнить, что...
+- Mul läks meelest, ... / Я забыл, что...
+
+### EI OLE KINDEL / НЕ УВЕРЕН
+
+- Las ma mõtlen! / Позвольте мне подумать!
+- Kuidas seda nüüd elda? / Как это сказать?
+- Seda on raske elda. / Это трудно сказать.
+- Ma ei ole päris kindel, et... / Я не совсем уверен, что...
+- Ma kahtlen selles. / Я сомневаюсь.
+- Ma pole päris kindel. / Я не совсем уверен.
+
+### PALUD JA PAKUD ABI / ПРОСИШЬ И ПРЕДЛАГАЕШЬ ПОМОЩЬ
+
+- Kas te saaksite mind aidata? / Вы могли бы мне помочь?
+- Kas ma võin teid aidata? / Могу ли я вам помочь?
+- Kas teil on abi vaja? / Вам нужна помощь?
+- Lubage, ma aitan. / Позвольте, я помогу.
+- Kas ma võin teilt paluda...? / Могу ли я у вас попросить...?
+
+### KEELDUD VIISAKALT / УВАЖИТЕЛЬНЫЙ ОТКАЗ
+
+- Ma kardan, et... / Боюсь, что...
+- Kahjuks... / К сожалению...
+- Mul on väga kahju, aga... / Мне очень жаль, но...
+- Küll on kahju, et... / Как жаль, что...
+- Vabandust, aga ma tõesti ei saa... / Извините, но я действительно не могу...
+
+### JARJESTAD / ПОСЛЕДОВАТЕЛЬНОСТИ
+
+- Esiteks..., teiseks..., kolmandaks... / Во-первых..., во-вторых..., в-третьих...
+- Kõigepealt / algul / alguses / esmalt,... / В первую очередь, сначала...
+- Seejärel / Pärast seda.... / Затем, потом... 
+- Esiteks..., siis... / Сначала..., потом...
+- Ühelt poolt...., teiselt poolt... / С одной стороны..., с другой стороны...
+- Ühest küljest..., teisest küljest... / С одной стороны..., с другой стороны...
+
+### TEED KOKKUVÕTTE / ПОДВОДИШЬ ИТОГ
+
+- Üldiselt... / В общем...
+- Lühidalt... / Короче...
+- Kokkuvõtteks... / В заключение...
+- Lõpetuseks... / В заключение...
+- Nii et... / Так что...
+- Ühesonaga / Ühesõnaga... / Одним словом...
