--- a/kodutöö/20250114.md
+++ b/kodutöö/20250114.md
@@ -47,16 +47,16 @@
 
 ## ÜTLE TEISITI!
 
-1. Eile selgusid eksami tulemused. Ma sain mu hinde kätte eile. 
-2. Ma ei mõistnud tema juttu. Ma ei saanud aru, mida ta rääkis.
-3. Mul ei ole selle kohta infot. Ma ei teadnud selle kohta midagi.
-4. Tehke kõik kodused ülesanded! Ärge unustage _____!
-5. Kirjutamine on kerge. Ma oskan _____.
-6. Kus need õpikud on? Kuhu sa _____?
-7. Arge rääkige nii kiiresti! Rääkige _____!
-8. Mul on kesktase. Ma olen _____.
-9. Mis see eesti keeles on? Kuidas seda _____?
-10. See tekst on päris raske. Sellest _____.
+1. Eile selgusid eksami tulemused. / Вчера стали известны результаты экзамена. Ma sain mu hinde kätte eile. / Я узнал свою оценку вчера. 
+2. Ma ei mõistnud tema juttu. / Я не понял его рассказ. / Ma ei saanud aru, mida ta rääkis. / Я не понял, о чем он говорил.
+3. Mul ei ole selle kohta infot. / У меня нет информации об этом. / Ma ei tea sellest midagi. / Я не знаю ничего об этом.
+4. Tehke kõik kodused ülesanded! / Сделайте все домашние задания! / Ärge unustage kogu pensum ära täitma! / Не забудьте выполнить весь заданный материал!
+5. Kirjutamine on kerge. / Письменные задания легкие. / Ma oskan kirjutuste ülesandeid teha üsna hästi. / Я умею делать письменные задания довольно таки хорошо.
+6. Kus need õpikud on? / Где эти учебники? / Kuhu sa meie õppevarade panid? / Куда ты положил наши учебные материалы? 
+7. Arge rääkige nii kiiresti! / Не говорите так быстро! / Rääkige aeglasemalt! / Говорите помедленнее!
+8. Mul on kesktase. / У меня средний уровень. / Ma olen kesktasemel. / Я на среднем уровне.
+9. Mis see eesti keeles on? / Как это по-эстонски? / Kuidas seda eesti keeles öeldakse? / Как это сказать по-эстонски?
+10. See tekst on päris raske. / Это довольно-таки сложный текст. / Sellest tekstist on päris keeruline aru saada. / Этот текст довольно сложен для понимания.
 
 
 ## KÕNEVÄLJENDID / РАЗГОВОРНЫЕ ВЫРАЖЕНИЯ
@@ -148,7 +148,7 @@
 - Küll on kahju, et... / Как жаль, что...
 - Vabandust, aga ma tõesti ei saa... / Извините, но я действительно не могу...
 
-### JARJESTAD / ПОСЛЕДОВАТЕЛЬНОСТИ
+### JARJESTAD / ПОСЛЕДОВАТЕЛЬНОСТЬ
 
 - Esiteks..., teiseks..., kolmandaks... / Во-первых..., во-вторых..., в-третьих...
 - Kõigepealt / algul / alguses / esmalt,... / В первую очередь, сначала...
@@ -157,7 +157,7 @@
 - Ühelt poolt...., teiselt poolt... / С одной стороны..., с другой стороны...
 - Ühest küljest..., teisest küljest... / С одной стороны..., с другой стороны...
 
-### TEED KOKKUVÕTTE / ПОДВОДИШЬ ИТОГ
+### TEED KOKKUVÕTTE / ПОДВЕДЕНИЕ ИТОГОВ
 
 - Üldiselt... / В общем...
 - Lühidalt... / Короче...
