--- a/kodutöö/20250117.md
+++ b/kodutöö/20250117.md
@@ -72,7 +72,7 @@
 12. Reis algab (4 juuni) **neljandal juunil**.
 
 
-### NATUKE AJALUGU, MIDA OMA VALISMAA SÕPRADELE EESTIST RÄÄKIDA / НЕМНОГО ИСТОРИИ, КОТОРУЮ МОЖНО РАССКАЗАТЬ ОБ ЭСТОНИИ СВОИМ ИНОСТРАННЫМ ДРУЗЬЯМ
+### NATUKE AJALUGU, MIDA OMA VALISMAA SÕPRADELE EESTIST RÄÄKIDA / НЕМНОГО ИЗ ИСТОРИИ ЭСТОНИИ, КОТОРУЮ МОЖНО РАССКАЗАТЬ СВОИМ ИНОСТРАННЫМ ДРУЗЬЯМ
 
 - Esimene raamat, kus oli sees ka eestikeelne tekst, ilmus 1525. aastal Saksamaal. / Первая книга, содержащая текст и на эстонском языке, была опубликована в 1525 году в Германии.
 - Esimene eestikeelne piibel ilmus 1739. aastal. Piibel on mailma kõige rohkem trükitud raamat. See on ilmunud enam kui 1850 keeles. / Первая Библия на эстонском языке была опубликована в 1739 году. Библия - самая печатаемая книга в мире. Она была опубликована более чем на 1850 языках.
