--- a/kodutöö/20250117.md
+++ b/kodutöö/20250117.md
@@ -1,41 +1,41 @@
 # Kodutöö 2025-01-17
 
-1. Почему не поехать на Кихну в августе. Miks mitte augustis Kihnu sõita?
-2. Ты прав, это действительно хорошая идея. Sul on õigus, see on tõesti hea mõte.
-3. Естественно он хочет остаться жить на Кихну. Loomulikult tahab ta Kihnule elama jääda.
-4. Я согласен поселиться на Кихну.
-5. Я не верю, что на Кихну все женщины ездят на мотоциклах с колясками.
-6. Невозможно, что на Кихну нет не одного мужчины, уставшего на волнах жизни.
-7. Так это точно не было.
+1. Почему не поехать на Кихну в августе. / Miks mitte augustis Kihnu sõita?
+2. Ты прав, это действительно хорошая идея. / Sul on õigus, see on tõesti hea mõte.
+3. Естественно он хочет остаться жить на Кихну. / Loomulikult tahab ta Kihnule elama jääda.
+4. Я согласен поселиться на Кихну. / Ma olen nõus Kihnule elama jääma.
+5. Я не верю, что на Кихну все женщины ездят на мотоциклах с колясками. / Ma ei usu, et kõik naised Kihnul sõidavad külgkorviga mootorrattaga.
+6. Невозможно, что на Кихну нет не одного мужчины, уставшего на волнах жизни. / Pole võimalik, et Kihnul pole ühtegi meest, kes oleks elumere lainetes väsinud.
+7. Так это точно не было. / Nii see küll ei olnud.
 8. Это неправда, что на Кихну свадьба длится только 1 день.
-9. Мне кажется, я бы больше хотел жить на Рухну, чем на Кихну.
-10. Мне известно, что на Кихну есть один прекрасный маяк.
-11. Кажется, что в Эстонии целых 2000 островов.
-12. Я на твоем месте поехал бы жить на Хийумаа.
+9. Мне кажется, я бы больше хотел жить на Рухну, чем на Кихну. / Mulle tundub, et ma tahaksin rohkem elada Ruhnul kui Kihnul.
+10. Мне известно, что на Кихну есть один прекрасный маяк. / Ma tean, et Kihnul on üks kaunis tuletorn.
+11. Кажется, что в Эстонии целых 2000 островов. / Tundub, et Eestis on lausa 2000 saart.
+12. Я на твоем месте поехал бы жить на Хийумаа. / Mina sinu asemel sõidaksin Hiiumaale elama.
 13. Лучшее, что ты могла бы сделать - не играть Рианну.
-14. Самое правильное, наверное, это закончить в нужное время.
-15. Каково ваше мнение? (х2 варианта)
+14. Самое правильное, наверное, это закончить в нужное время. / Ilmselt, kõige õigem on lõpetada õigel ajal. 
+15. Каково ваше мнение? (х2 варианта) / Milline on teie seisukoht? / Mida teie arvate?
 16. Как вам кажется, этот народный дом не слишком модный?
 17. Наверное, вы меня неправильно поняли. Я не говорю по-кихнуски.
 18. Я должен уточнить, во сколько отправляется следующий паром на Кихну.
-19. Я не имел это в виду. / Я так это не думал.
-20. Я не помню, сколько маяков на Кихну? Mul läks meelest, mitu tuletorni Kihnus on?
+19. Я не имел это в виду. / Ma ei mõelnud seda nii.
+20. Я не помню, сколько маяков на Кихну? / Mul läks meelest, mitu tuletorni Kihnus on?
 21. Мне вспомнилось, что также я еще не был на Прангли.
-22. Я забыл, что завтра еду первым паромом на Сааремаа.
+22. Я забыл, что завтра еду первым паромом на Сааремаа. / Ma olen unustanud, et ma lähen homme esimese praamiga Saaremaale.
 23. Дай подумаю! / Las ma mõtlen!
-24. Как это (теперь) сказать?
-25. Я сомневаюсь в этом. Это сложно сказать.
+24. Как это (теперь) сказать? / Kuidas seda nüüd öelda?
+25. Я сомневаюсь в этом. Это сложно сказать. / Ma kahtlen selles. See on raske öelda.
 26. Вы могли бы мне помочь? Как по-кихнуски будет "картофель"?
-27. Позвольте, я помогу. Женщины не должны работать на поле одни.
+27. Позвольте, я помогу. Женщины не должны работать на поле одни. / Las ma aitan. Naised ei peaks üksinda põllul töötama.
 28. Вам нужна помощь? Я могу сфотографировать вас вместе с тюленем.
-29. Я мог бы вас попросить, чтобы вы меня сфотографировали?
-30. Я боюсь, что не все женщины на Кихну - замечательные рукодельницы.
-31. Мне очень жаль, но я не ношу народную одежду каждый день.
+29. Я мог бы вас попросить, чтобы вы меня сфотографировали? / Kas ma võiksin paluda mind pildistada?
+30. Я боюсь, что не все женщины на Кихну - замечательные рукодельницы. / Ma kardan, et mitte kõik Kihnu naised ei ole suurepärased käsitöömeistrid. 
+31. Мне очень жаль, но я не ношу народную одежду каждый день. / Mul on väga kahju, aga ma ei kanna rahvariideid iga päev.
 32. Простите, но я действительно не могу пойти на эту кихнускую свадьбу, хоть она и занесена в список культурного наследия ЮНЕСКО.
 33. Во-первых, они замечательные рыбаки. Во-вторых, они очень усталые мужчины. В-третьих, их жены каждый день носят пестрые полосатые юбки.
-34. С одной стороны, я не люблю работать. С другой стороны, я люблю получать деньги.
-35. В начале в Эстонии было 1500 островов. Затем их стало 2000.
-36. Вкратце, это было довольно легкое упражнение.
+34. С одной стороны, я не люблю работать. С другой стороны, я люблю получать деньги. / Ühest küljest, mulle ei meeldi töötada. Teisest küljest, mulle meeldib raha saada.
+35. В начале в Эстонии было 1500 островов. Затем их стало 2000. / Alguses oli Eestis 1500 saart. Hiljem jäi neid 2000.
+36. Вкратце, это было довольно легкое упражнение. / Üldiselt, see oli üsna lihtne ülesanne.
 37. Одним словом, я задолбался. / Ühesõnaga, ma olen täiesti tüdinenud.
 
 
