--- a/kodutöö/20250125.md
+++ b/kodutöö/20250125.md
@@ -30,7 +30,7 @@
 3. **Avatud** kõigile küsimustele! / **Открыт** для любых вопросов!
 4. **Andke** teada, mida eelistate. / **Дайте знать**, что вы предпочитаете.
 5. **Lugege** seda teksti veel kord! / **Прочтите** этот текст еще раз!
-6. **Pidage** kõik väljendid **meelde**. / **Запомните** все выражения.
+6. **Jätke** kõik väljendid **meelde**. / **Запомните** все выражения.
 7. **Kirjutage** kiiremini! / **Пишите** быстрее!
 8. **Mõelge** enne, kui otsustate! / **Подумайте** перед тем, как принять решение!
 9. **Kirjeldage** neid kolme pilti! / **Опишите** эти три картинки!
@@ -43,7 +43,7 @@
 2. A: **Õppige** veel väljendeid kodus! Homme **teeme** testi. B: Me ei **taha** testi **teha**.
 3. A: Vihma hakkab vist **sadama**. B: Jah, praegu sügisel **sajab** peaaegu iga päev.
 4. A: Eile **oli** paks udu, lennukid ei **lennanud**. B: Tean, Ene **jäi** seminarile hiljaks.
-5. A: Palun **too** poest midagi head. B: Ma eile **ostsin** jäätist. Kas see **on** juba otsa?
+5. A: Palun **too** poest midagi head. B: Ma eile **ostsin** jäätist. Kas see **sai** juba otsa?
 6. A: Kuidas puhkus läks? B: Ma ei **puhanud** üldse, ainult õppisin eksamiks.
 7. A: Miks sa eile tööle ei **läinud**? B: Ma ei **pidanud** eile kontoris olema, töötasin kodus.
 
