--- a/kodutöö/20250128.md
+++ b/kodutöö/20250128.md
@@ -52,33 +52,33 @@
 
 ### Abielluma, abielluda, abiellun kellega?
 
-1. Не женись на этой женщине, она опасна!
+1. Не женись на этой женщине, она опасна! / Ära abiellu selle naisega, ta on ohtlik!
 2. За кого ты хочешь выйти замуж? / Kellega sa tahad abielluda?
-3. Он женился на этой умной, красивой, стройной, веселой, но немного странной женщине.
+3. Он женился на этой умной, красивой, стройной, веселой, но немного странной женщине. / Ta on abielanud selle targa, ilusa, saleda, lõbusa, aga natuke imeliku naisega.
 
 ### Abistama, abistada, abistan keda?
 
-1. Она работает в архиве и помогает людям в нахождении своих корней.
+1. Она работает в архиве и помогает людям в нахождении своих корней. / Ta töötab arhiivis ja abistab inimesi oma juurte leidmisel.
 2. Ты поможешь этой симпатичной девушке? / Kas sa abistad seda toredat tüdrukut?
-3. Нет, я помогу этому суровому высокому замкнутому мужчине.
+3. Нет, я помогу этому суровому высокому замкнутому мужчине. / Ei, ma abistan seda karmi, kõrget, kinnist meest.
 
 ### Ahvatlema, ahvatleda, ahvatlen (O + millele?, O + ma-inf)
 
-1. Он соблазнил ее на переезд. / Ta ahvatles temale kolima.
-2. Она соблазнила его на поход в спортзал.
-3. Не соблазняй меня на изучение бухгалтерии.
-4. Поход в торговый центр соблазняет людей тратить деньги.
-5. Владельцы кошек соблазняют других людей брать домой кошек из приюта.
-6. Кихну соблазняет Сильвию делать больше фотографий.
+1. Он соблазнил ее на переезд. / Ta ahvatles teda kolima.
+2. Она соблазнила его на поход в спортзал. / Ta ahvatles teda jõusaalis käimisele.
+3. Не соблазняй меня на изучение бухгалтерии. / Ära ahvatle mind raamatupidamist õppima.
+4. Поход в торговый центр соблазняет людей тратить деньги. / Kaubandus keskustes käimine ahvatleb inimesi rahat kuulutamisele.
+5. Владельцы кошек соблазняют других людей брать домой кошек из приюта. / Kasside omanikud ahvatlevad teisi inimesi võtma kasse varjupaigast.
+6. Кихну соблазняет Сильвию делать больше фотографий. / Kihnu ahvatleb Silviat rohkem pilti tegema.
 
 ### Aitama, aidata, aitan keda? (kellel + da-inf, kellest? millest)
 
 1. Могу ли я вам помочь? / Kas ma saan teid aidata?
-2. Нет, этому усталому тюленю уже нельзя помочь.
-3. Женщины помогают мужчинам, уставшим на волнах жизненного моря.
-4. На Кихну все помогают всем научиться рукоделию.
+2. Нет, этому усталому тюленю уже нельзя помочь. / Ei, seda väsinud hüljest enam ei saa aidata.
+3. Женщины помогают мужчинам, уставшим на волнах жизненного моря. / Naised aitavad elumerel väsinud mehi.
+4. На Кихну все помогают всем научиться рукоделию. / Kihnul aitavad kõik kõiki käsitööd õppima.
 5. Эта фотография девочки помогла Сильвии получить первое место.
-6. Переезд помог ей решить стать фотографом.
+6. Переезд помог ей решить стать фотографом. / Kolimine aitas tal saada fotograafiks.
 7. Хватит работать на поле, давайте болтать!
 8. Хватит болтать, давайте рукодельничать!
 9. Хватит рукодельничать, давайте посмотрим на тюленей!
