--- a/kodutöö/20250128.md
+++ b/kodutöö/20250128.md
@@ -76,7 +76,7 @@
 1. Могу ли я вам помочь? / Kas ma saan teid aidata?
 2. Нет, этому усталому тюленю уже нельзя помочь. / Ei, seda väsinud hüljest enam ei saa aidata.
 3. Женщины помогают мужчинам, уставшим на волнах жизненного моря. / Naised aitavad elumerel väsinud mehi.
-4. На Кихну все помогают всем научиться рукоделию. / Kihnul aitavad kõik kõiki käsitööd õppima.
+4. На Кихну все помогают всем научиться рукоделию. / Kihnul aitavad kõik kõigil käsitööd õppida.
 5. Эта фотография девочки помогла Сильвии получить первое место.
 6. Переезд помог ей решить стать фотографом. / Kolimine aitas tal saada fotograafiks.
 7. Хватит работать на поле, давайте болтать!
