Add new sentences for passive voice exercises and revise existing examples

--- a/kodutöö/20250728.md
+++ b/kodutöö/20250728.md
@@ -1,23 +1,47 @@
 # Kodutöö 2025-07-28
 
+## 2. Täida tabel.
+
+| -TUD vorm            | Mida tehakse?    | Mida tehti?   |
+|----------------------|------------------|---------------| 
+| 1. ehitatud          | ehita**takse**   | ehita**ti**   |
+| 2. õpitud            | õpi**takse**     | õpi**ti**     |
+| 3. saadetud          | saade**takse**   | saade**ti**   |
+| 4. sõidetud          | sõide**takse**   | sõide**ti**   |
+| 5. loetud            | loe**takse**     | loe**ti**     |
+| 6. muudetud          | muude**takse**   | muude**ti**   |
+| 7. parandatud        | paranda**takse** | paranda**ti** |
+| 8. õmmeldud          | õmmel**dakse**   | õmmel**di**   | 
+| 9. kuuldud           | kuul**dakse**    | kuul**di**    |
+| 10. võimeldud        | võimel**dakse**  | võimel**di**  |
+| 11. mõteldud/mõeldud | mõel**dakse**    | mõel**di**    |
+| 12. võrreldud        | võrrel**dakse**  | võrrel**di**  |
+| 13. naerdud          | naer**dakse**    | naer**di**    |
+| 14. käidud           | käi**akse**      | käi**di**     |
+| 15. söödud           | söö**akse**      | söö**di**     |
+| 16. pandud           | pann**akse**     | pan**di**     |
+| 17. mindud           | minn**akse**     | min**di**     |
+| 18. toodud           | too**akse**      | too**di**     |
+
+
 ## 3. Kirjuta laused olevikus.
 
 1. Lapsed *mängivad* (mängima) maja ees palli. Õhtuti *mängitakse* (mängima) maja ees palli.
-2. Vend värvib maja roheliseks. Maja värvitakse roheliseks.
-3. Inimesed õppivad kogu elu. Õpitakse kogu elu.
-4. Isa parandab telefoni. Kus parandatakse mobiiltelefone?
-5. Pida poes müüakse? Kes müüb korterit.
-6. Linnas ehitatakse kauplust. Me ehitame maja.
-7. Õpilased söövad koolisööklas. Mida süüakse koolisööklas?
-8. Suvel juuakse külma vett. Suvel inimesed joovad külma vett.
-9. Tahvlile kirjutatakse markeriga. Ma kirjutan pastakaga.
-10. Minu õde lugeb palju. Ülikoolis loetakse palju.
-11. Haigele antakse rohtu. Arst annab rohtu.
-12. Millal tuuakse kuusk tuppa? Kes toob kuuse tuppa?
-13. Töö eest makstakse palka. Kas sina maksad pileti eest?
-14. Ma panen ukse kinni. Kinod ja teatrid pannakse taas kinni.
-15. Kaubale tullakse järele. Kaup tuleb homme.
-16. Lapsed käivad lasteaias. Lasteaias käiakse õues iga päev.
+2. Vend *värvib* (värvima) maja roheliseks. Maja *värvitakse* (värvima) roheliseks.
+3. Inimesed *õppivad* (õppima) kogu elu. *Õpitakse* (õppima) kogu elu.
+4. Isa *parandab* (parandama) telefoni. Kus *parandatakse* (parandama) mobiiltelefone?
+5. Mida poes *müüakse* (müüma)? Kes *müüb* (müüma) korterit?
+6. Linnas *ehitatakse* (ehitama) kauplust. Me *ehitame* (ehitama) maja.
+7. Õpilased *söövad* (sööma) koolisööklas. Mida *süüakse* (sööma) koolisööklas?
+8. Suvel *juuakse* (jooma) külma vett. Suvel inimesed *joovad* (jooma) külma vett.
+9. Tahvlile *kirjutatakse* (kirjutama) markeriga. Ma *kirjutan* (kirjutama) pastakaga.
+10. Minu õde *loeb* (lugema) palju. Ülikoolis *loetakse* (lugema) palju.
+11. Haigele *antakse* (andma) rohtu. Arst *annab* (andma) rohtu.
+12. Millal *tuuakse* (tooma) kuusk tuppa? Kes *toob* (tooma) kuuse tuppa?
+13. Töö eest *makstakse* (maksma) palka. Kas sina *maksad* (maksma) pileti eest?
+14. Ma *panen* (panema) ukse kinni. Kinod ja teatrid *pannakse* (panema) taas kinni.
+15. Kaubale *tullakse* (tulema) järele. Kaup *tuleb* (tulema) homme.
+16. Lapsed *käivad* (käima) lasteaias. Lasteaias *käiakse* (käima) õues iga päev.
 
 ## 4. Kirjuta laused umbisikulises tegumoes.
 
