Add new sentences for passive voice exercises

--- a/kodutöö/20250728.md
+++ b/kodutöö/20250728.md
@@ -18,9 +18,9 @@
 | 12. võrreldud        | võrrel**dakse**  | võrrel**di**  |
 | 13. naerdud          | naer**dakse**    | naer**di**    |
 | 14. käidud           | käi**akse**      | käi**di**     |
-| 15. söödud           | söö**akse**      | söö**di**     |
+| 15. söödud           | süü**akse**      | söö**di**     |
 | 16. pandud           | pann**akse**     | pan**di**     |
-| 17. mindud           | minn**akse**     | min**di**     |
+| 17. mindud           | mind**akse**     | min**di**     |
 | 18. toodud           | too**akse**      | too**di**     |
 
 
@@ -43,7 +43,26 @@
 15. Kaubale *tullakse* (tulema) järele. Kaup *tuleb* (tulema) homme.
 16. Lapsed *käivad* (käima) lasteaias. Lasteaias *käiakse* (käima) õues iga päev.
 
+
 ## 4. Kirjuta laused umbisikulises tegumoes.
 
 1. Lapsed ei laula kunstitunnis. *Kunstitunnis ei laulda.*
 2. Nad rääkisid palju. *Palju räägiti.*
+3. Ma ei vaadanud aknast välja. *Aknast välja ei vaadatud.*
+4. Nad räägivad nii. *Nii räägitakse.*
+5. Ta ei õppinud siin. *Siin ei õpitud.*
+6. Lapsed karjusid koos. *Karjuti koos.*
+7. Nad hääletasid klassis. *Klassis hääletati.*
+8. Meie ei lobise klassis. *Klassis ei loobiseta (ei lobistata?).* 
+9. Ta tantsib igal pool. *Igal pool tantsitakse.*
+10. Ema andis lapsele raha. *Lapsele anti raha.*
+11. Inimesed pesevad end hommikuti. *Hommikuti end pestakse.*
+12. Sportlased teenivad staadionil. *Staadionil teenitakse.*
+13. Me vastasime õigesti. *Vastatati õigesti.*
+14. Nad käivad ekskursioonidel. *Ekskursioonidel käiakse.*
+15. Mida te poest tellisite? *Mida poest telliti?*
+16. Ma saatsin sulle e-kirja. *Sulle saadeti e-kirja.*
+17. Te hakkate töötama. *Töötama hakatakse.*
+18. Mis keeles ta mõtleb? *Mis keeles mõteldakse?*
+19. Nad ei sõitnud maale. *Maale ei sõidetud.*
+20. Sõbrad helistavad mulle sageli. *Mulle helistatakse sageli.*
