Add new sentences for past tense exercises and revise existing examples

--- a/kodutöö/20250728.md
+++ b/kodutöö/20250728.md
@@ -53,7 +53,7 @@
 5. Ta ei õppinud siin. *Siin ei õpitud.*
 6. Lapsed karjusid koos. *Karjuti koos.*
 7. Nad hääletasid klassis. *Klassis hääletati.*
-8. Meie ei lobise klassis. *Klassis ei loobiseta (ei lobistata?).* 
+8. Meie ei lobise klassis. *Klassis ei lobiseta.* 
 9. Ta tantsib igal pool. *Igal pool tantsitakse.*
 10. Ema andis lapsele raha. *Lapsele anti raha.*
 11. Inimesed pesevad end hommikuti. *Hommikuti end pestakse.*
@@ -66,3 +66,40 @@
 18. Mis keeles ta mõtleb? *Mis keeles mõteldakse?*
 19. Nad ei sõitnud maale. *Maale ei sõidetud.*
 20. Sõbrad helistavad mulle sageli. *Mulle helistatakse sageli.*
+
+
+## 5. Kirjuta laused minevikus.
+
+1. Õhtul enam telerit ei *vaadatud* (vaatama).
+2. Teadet ei *antud* (andma) kahjuks edasi.
+3. Eile *maksti* (maksma) parklas sularahas.
+4. Laulupeol *lauldi* (laulma).
+5. Klassis ei *mängitud* (mängima) telefonis, vaid *kuulati* (kuulama) õpetajat.
+6. Nädalavahetusel *puhati* (puhkama).
+7. Millega 70 aastat tagasi *kirjutati* (kirjutama)?
+8. Kus seekord üritust *peeti* (pidama)?
+9. Neile ei *valetatud* (valetama), nad said ise valesti aru.
+10. Pühapäeval *magati* (magama) kella kaheni päeval.
+11. Seekord *räägiti* (rääkima) koosolekul eriti kaua.
+12. Peol ei *tantsitud* (tantsima).
+13. Kõige rohkem *osteti* (ostma) poest jõulude ajal verivorsti.
+14. Koju ei *sõidetud* (sõitma) trolli, vaid bussiga.
+15. Kaubamajas *pakuti* (pakkuma) tasuta komme.
+16. Kinos *vaadati* (vaatama) põnevat filmi.
+17. Rong läks katki ning uut rongi *oodati* (ootama) veerand tundi.
+
+
+## 6. Kirjuta lünka tegusõna umbisikulises tegumoes liht- ja täisminevikus.
+
+1. **saatma**: Kutsed *saadeti* meili teel. Kutsed *on* meili teel *saadetud*.
+2. **helistama**: Mulle *helistati* võõralt telefoninumbrilt. Mulle *on* sageli võõralt numbrilt *helistatud*.
+3. **sõitma**: Eelmisel nädalal *sõideti* ülekäigurajal jalakäijale otsa. Jalakäijatele *on* ülekäigurajal otsa *sõidetud*.
+4. **tegema**: Mulle *tehti* ettepanek osaleda konkursil. Mulle *on tehtud* huvitavaid ettepanekuid.
+5. **keelduma**: Ivole *keelduti* viisat andmast. Ivole *on* korduvalt *keeldutud* viisat andmast.
+6. **küsima**: Kas sinult ka *küsiti* midagi? Minult *on* seda küsimust korduvalt *küsitud*.
+7. **sattuma**: *Satuti* avariisse. Sellel maantel *on* sageli avariisse *satutud*.
+8. **hääletama**: Ega te ei tea, kelle poolt *hääletati*? Siin on kandidaatide nimed, kelle poolt *on* juba *hääletatud*.
+
+
+## 7. Tõlgi.
+
