--- a/kodutöö/20250728.md
+++ b/kodutöö/20250728.md
@@ -104,22 +104,22 @@
 ## 7. Tõlgi.
 
 1. На вечеринке смеялись очень много. *Peol naerdi eriti palju.*
-2. В какой школе вы учились? *Kus koolis õpiti?*
+2. В какой школе вы учились? *Kus koolis te õppisite?*
 3. На завтра обещали хорошую погоду. *Homseks lubati head ilma.*
 4. В театр обычно ходят по вечерам. *Teatris käiakse tavaliselt õhtuti.*
 5. Здесь строится новый дом. *Siin ehitatakse uut maja.*
 6. Эта квартира не продается. *Seda korterit ei müüda.*
 7. В этой школе не изучают русский язык. *Selles koolis vene keelt ei õpita.*
-8. Она не ест сыр. *Juustu ei sööda.*
+8. Она не ест сыр. *Ta ei söö juustu.*
 9. Это говорилось по радио. *Seda räägiti raadios.*
 10. Они каждый день ходят в кафе. *Nad käivad kohvikus iga päev.*
-11. Обычно в кафе пьют кофе и едят салат. **
-12. Здесь не курят. **
-13. Что вам говорили на собрании? **
-14. Кто смотрел этот фильм? **
-15. На празднике ели и пили. **
-16. В парке гуляют. **
-17. Что обычно делают в школе? **
-18. Мне не дали конфету. **
-19. Сегодня мало купили. **
-20. На рынке редко платят картой. **
+11. Обычно в кафе пьют кофе и едят салат. *Kohvikus tavaliselt juuakse kohvi ja süüakse salatit.*
+12. Здесь не курят. *Siin ei suitsetata.*
+13. Что вам говорили на собрании? *Mida koosolekul teile teatati?*
+14. Кто смотрел этот фильм? *Kes seda filmi vaatas?*
+15. На празднике ели и пили. *Peol söödi ja joodi.*
+16. В парке гуляют. *Pargis jalutatakse.*
+17. Что обычно делают в школе? *Mida tavaliselt koolis tehakse?*
+18. Мне не дали конфету. *Mulle ei antud kommi.*
+19. Сегодня мало купили. *Osteti täna vähe.*
+20. На рынке редко платят картой. *Turul makstakse kaardiga harva.*
