--- a/books/stalnuhhin/24.md
+++ b/books/stalnuhhin/24.md
@@ -1,45 +1,52 @@
 # Глава 24. О форме OSASTAV множественного числа.
 
-## Harjutus 206
+## Harjutus 206.
 
 1. Найдите среди нижеследующих слов названия продуктов питания
 
-|          |          |                 |           |            |
-|----------|----------|-----------------|-----------|------------|
-| liiter   | *küpsis* | *punane sõstar* | *kana*    | *hani*     |
-| *tort*   | *kapsas* | suvi            | *pirn*    | *viin*     |
-| *õun*    | kuusk    | *maasikas*      | vihm      | haigus     |
-| pori     | kass     | *taimeõli*      | *juust*   | nõid       |
-| *vorst*  | sula     | kõrv            | kott      | *vaarikas* |
-| pakk     | *sai*    | *sink*          | *porgand* | *päts*     |
-| *mahl*   | *kala*   | *tomat*         | köök      | gramm      |
-| *viiner* | *kilu*   | purk            | *kook*    | *kartul*   |
-| arst     | kilo     | *kurk*          | kokk      | *sibul*    |
+|            |             |                   |             |              |
+|------------|-------------|-------------------|-------------|--------------|
+| liiter     | **küpsis**  | **punane sõstar** | **kana**    | **hani**     |
+| **tort**   | **kapsas**  | suvi              | **pirn**    | **viin**     |
+| **õun**    | kuusk       | **maasikas**      | vihm        | haigus       |
+| pori       | kass        | **taimeõli**      | **juust**   | nõid         |
+| **vorst**  | sula        | kõrv              | kott        | **vaarikas** |
+| pakk       | **sai**     | **sink**          | **porgand** | **päts**     |
+| **mahl**   | **kala**    | **tomat**         | köök        | gramm        |
+| **viiner** | **kilu**    | purk              | **kook**    | **kartul**   |
+| arst       | kilo        | **kurk**          | kokk        | **sibul**    |
 
 2. Какие из приведенных глаголов могут понадобиться при покупке сыра?
 
-|           |             |          |               |
-|-----------|-------------|----------|---------------|
-| ööbima    | pesema      | jooma    | *ostma*       |
-| suplema   | *maksma*    | *valima* | mängima       |
-| *kaaluma* | dresseerima | *müüma*  | kommenteerima |
+|              |             |            |               |
+|--------------|-------------|------------|---------------|
+| ööbima       | pesema      | jooma      | **ostma**     |
+| suplema      | **maksma**  | **valima** | mängima       |
+| **kaaluma**  | dresseerima | **müüma**  | kommenteerima |
 
 
 ## Harjutus 207.
 
 Переведите и определите, в каких формах попеременно используется ассортимент хлебного магазина.
 
-1. Mis on müügil leivapoes? - Leivapoes on müügil *leib*, *sai*, *küpsised*, *tordid*, *koogid*, *saiakesed*, *kuivikud*.
+1. Mis on müügil leivapoes? - Leivapoes on müügil **leib**, **sai**, **küpsised**, **tordid**, **koogid**, **saiakesed**, **kuivikud**.
 
-Используется **nimetav**.
+Используется *nimetav*.
 
-2. Mida saate jutustada hindadest? - Ma tean, et *leiva* ja *saia* hind võib olla ... kuni ... eurot, aga *küpsiste*, *tortide*, *kookide*, *saiakeste* ning *kuivikute* hinnast ei tea midagi.
+2. Mida saate jutustada hindadest? - Ma tean, et **leiva** ja **saia** hind võib olla ... kuni ... eurot, aga **küpsiste**, **tortide**, **kookide**, **saiakeste** ning **kuivikute** hinnast ei tea midagi.
 
-Используется **omastav**.
+Используется *omastav*.
 
-3. Mida on vaja osta? - On vaja osta *leiba*, *saia*, *küpsist*, *torti*, *paar kooki* ja *saiakest*.
+3. Mida on vaja osta? - On vaja osta **leiba**, **saia**, **küpsist**, **torti**, **paar kooki** ja **saiakest**.
 
-Используется **osastav**.
+Используется *osastav*.
+
+
+## Harjutus 208. 
+
+Переведите несколько отрывков из школьных сочинений.
+
+1. Iga inimene
 
 ## Uus sõnavara
 
